--- a/react/src/components/styles.scss
+++ b/react/src/components/styles.scss
@@ -32,9 +32,9 @@
   }
 
   .container-search {
-    flex: 2;
-    padding-left: 20px;
-    padding-right: 20px;
+    flex: 1;
+    padding-left: 5px;
+    padding-right: 5px;
 
     form {
       height: 100%;
@@ -160,8 +160,21 @@
     }
   }
   ul{
+    flex: 1;
+    display: flex;
+    align-items: center;
+
+    .link {
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 0.1em;
+      font-size: 18px;
+      font-weight: 600;
+      color: white !important;
+      padding-bottom: 5px;
+    }
     list-style-type: none;
-    margin-bottom: -30px;
+    margin-bottom: -10px;
     margin-top: 0px;
     display: flex;
     flex-direction: row;
